--- a/index_prova/index.html
+++ b/index_prova/index.html
@@ -24,15 +24,16 @@
       <h1>Prenota le tue visite online!</h1>
 
       <div class="buttons">
-        <btn class="btn button1" onclick="toggleElement('login_content')">Login</btn>
-        <btn class="btn button2" onclick="toggleElement('signup_content')">Sign Up</btn>
+        <btn class="btn button2" onclick="toggleElement('login_content')">Login</btn>
+        <btn class="btn button1" onclick="toggleElement('signup_content')">Sign Up</btn>
       </div>
     </div>
 
     <div class="shadow" id="shadow">
       <div class="login_content" id="login_content">
         <btn class="fa fa-times" onclick="toggleElement('login_content')"></btn>
-        <img src="/images/user.png" alt="">
+        <img src="images/user.png" alt="">
+
         <h3>Sign In</h3>
         <form class="input" action="php/login.php" method="post">
 
@@ -52,7 +53,7 @@
 
       <div class="signup_content" id="signup_content">
         <btn class="fa fa-times" onclick="toggleElement('signup_content')"></btn>
-        <img src="/images/user.png" alt="">
+        <img src="images/user.png" alt="">
         <h3>Sign Up</h3>
         <form class="input" action="php/input.php" method="post">
 
