--- a/paziente/paziente.html
+++ b/paziente/paziente.html
@@ -1,21 +1,8 @@
 <!DOCTYPE html>
-
-<?php
-  session_start();
-
-  $user_img = $_SESSION["img"];
-  $nome = $_SESSION["nome"];
-  $cognome = $_SESSION["cognome"];
-  $cod_fiscale = $_SESSION["cod_fiscale"];
-  $luogo_nascita = $_SESSION["luogo_nascita"];
-
-
- ?>
-
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="css/pazientestyle.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href='//fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
@@ -88,35 +75,16 @@
           <div id="Home" class="tabcontent home">
 
             <div class="col-lg-3 home1">
-              <div class="user_buttons">
-
-              </div>
               <div class="user_image">
-                <img src="<?php  echo $user_img; ?>" class="image_css" alt="">
+                image
               </div>
               <div class="user_name">
-                <?php echo $nome . "<br>" . $cognome; ?>
-              </div>
-
-              <div class="row1">
-                <div class="line1">
-                </div>
-              </div>
-
-              <div class="ruolo">
-                Paziente
-              </div>
-
-              <div class="row">
-                <div class="line">
-                </div>
+                user name
               </div>
             </div>
 
             <div class="col-lg-9 home2">
-              <div class="headerhome2">
-                PROFILO <i class="fa fa-user"></i>
-              </div>
+              dasda
             </div>
 
           </div>
